compiler-core/src/parse/snapshots/rakun_core__parse__tests__type_invalid_record_constructor.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub record User {\n    name: String,\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:5
  │
3 │     name: String,
  │     ^^^^ I was not expecting this

Each custom type variant must have a constructor:

pub type User {
  User(
    name: String,
  )
}
